Fix: Allow flex wrapping to prevent overflow on small screens

--- a/style.css
+++ b/style.css
@@ -260,6 +260,8 @@ dialog:open {
    bottom: 50%;
    
    display: flex;
+   justify-content: center;
+   flex-wrap: wrap;
 }
 
 dialog::backdrop {
